fixed tart-refresh icons alignment

--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -27,6 +27,7 @@
       ". circle ."
       ". circle ."
       "session circle break";
+    grid-template-columns: 20% 1fr 20%;
 
     width: 100%;
     height: 100%;
@@ -50,6 +51,8 @@
   .fa-play {
     max-width: 100%;
     max-height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .settings-buttons {
@@ -69,10 +72,12 @@
   }
 
   .start-refresh-buttons {
+    margin:0;
     //min-width: 30%;
     height: max-content;
     aspect-ratio: 1 / 1;
     //border: solid green;
+    padding: 0;
     background-color: rgb(0, 50, 75);
   }
 
@@ -143,6 +148,7 @@
     //border: solid black;
 
     min-width: 45%;
+    padding: 0;
   }
 
   #circle {
@@ -218,9 +224,6 @@
     box-shadow: 1px 1px 5px 1px white, -1px -1px 5px, white, -1px 1px 5px white,
       1px -1px 5px white;
 
-    width: 36px;
-    height: 36px;
-    max-width: 100%;
 
     //background-color: darkblue;
 
